fix: Prevent copy button in inline copy-to-clipboard from wrapping on its own line (#4496)

--- a/src/copy-to-clipboard/styles.scss
+++ b/src/copy-to-clipboard/styles.scss
@@ -13,6 +13,7 @@
   word-break: break-all;
 
   &-trigger {
+    white-space: nowrap;
     margin-inline-end: awsui.$space-scaled-xxs;
   }
 }
